<resources>
    <string name="app_name">Fila Virtual</string>

    <string name="tvCorreo">Correo:</string>
    <string name="tvPass">Contraseña:</string>
    <string name="tvNombre">Nombre:</string>
    <string name="tvApellido">Apellido:</string>
    <string name="tvEdad">Edad:</string>
    <string name="tvTelefono">Teléfono:</string>
    <string name="tvBienvenido">¡Hola!</string>
    <string name="tvEstablecimiento">Establecimiento</string>
    <string name="tvLugar">Lugar</string>
    <string name="tvArea">Área</string>
    <string name="tvFecha">Fecha</string>
    <string name="tvFechaActual">Fecha actual</string>
    <string name="tvFechaNueva">Fecha nueva</string>
    <string name="tvHora">Hora</string>
    <string name="tvHoraActual">Hora actual</string>
    <string name="tvHoraNueva">Hora nueva</string>
    <string name="tvGuardar">Guardar</string>
    <string name="tvCancelar">Cancelar</string>
    <string name="tvEliminar">Eliminar</string>
    <string name="tvCambiarFoto">Cambiar foto</string>
    <string name="tvContrasenaAct">Contraseña actual</string>
    <string name="tvContrasenaNuev">Nueva contraseña</string>
    <string name="tvContrasenaRep">Repetir contraseña</string>
    <string name="tvActualizarFoto">Actualizar foto</string>
    <string name="tvCambioFotoPerfil">Cambiar foto de perfil</string>
    <string name="btBuscar">Buscar </string>
    <string name="btVolver">Volver</string>


    <string name="btIngresar">Ingresar</string>
    <string name="btNoCuenta">¿No tienes cuenta?</string>
    <string name="btRegistrar">Registrar</string>
    <string name="btCerrarSesion">Cerrar sesión</string>
    <string name="btConfirmar">Confirmar</string>

    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tv_TituloRegistro">Nueva cuenta</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_cuenta">Cuenta</string>
    <string name="bt_editar">Editar datos</string>

    <string-array name="array_establecimientos">
        <item>Banco Nacional de Costa Rica</item>
        <item>Municipalidad de San José</item>
        <item>Registro Civil</item>
    </string-array>

    <string-array name="array_bcr">
        <item>Cajas</item>
        <item>Plataforma de servicios</item>
        <item>Crédito</item>
    </string-array>

    <string-array name="array_muni">
        <item>Cajas</item>
        <item>Plataforma de servicios</item>
        <item>Gestión de patentes</item>
    </string-array>

    <string-array name="array_registro">
        <item>Solicitud de TIM</item>
        <item>Plataforma de servicios</item>
    </string-array>

    <string-array name="array_horas">
        <item>08:00</item>
        <item>10:00</item>
        <item>12:00</item>
        <item>15:00</item>
        <item>18:00</item>
    </string-array>
</resources>