<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.cuenta.Cuenta">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNombre"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cargando..."
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvApellido"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cargando..."
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvEdad"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cargando..."
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTelefono"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cargando..."
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCorreo"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cargando..."
        android:textStyle="italic" />

    <Button
        android:id="@+id/btEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_editar" />

    <Button
        android:id="@+id/btLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btCerrarSesion" />

</LinearLayout>